feat: aula de transições

--- a/pasta-html/metatags.html
+++ b/pasta-html/metatags.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Tumblr</title>
+        <title>intro</title>
         <link rel="icon" href="../files/tumblr.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, 
