--- a/pasta.css/projeto.html
+++ b/pasta.css/projeto.html
@@ -10,23 +10,30 @@
                 background-image: linear-gradient(purple, #00ffff);
                 background-repeat: no-repeat;
                 height: 100vh;
+                position: relative;
             }
-            h1{
-                display: block;
+            .flutuante {
+                position: fixed;
+                right: 0;
+                display: inline-block;
                 background-color: goldenrod;
+                width: 200px;
+                height: 500px;
+                /* margin: 20px 20px;
+                padding: 10px 10px; */
                 text-align: center;
                 font-size: 50px;
                 color: #006699;
                 font-family: "Times New Roman", Times, serif;
             }
-            p{
+            p {
                 text-align: center;
                 font-size: 20px;
-                color: #023e5c;
+                color: #000000;
                 font-family: "Times New Roman", Times, serif;
             }
-            .bloco{
-                position: relative;
+            .bloco {
+                /* position: abslute; */
                 width: 300px;
                 background: burlywood;
                 margin: 30px 280px;
@@ -34,6 +41,7 @@
                 box-shadow: 10px 20px 25px rgb(136, 113, 82, 0.5);
             }
             .pin {
+                z-index: 999;
                 background: linear-gradient(red, rgb(97, 9, 9));
                 box-shadow: 5px 5px 14px 0px rgb(128 0 0);
                 width: 20px;
@@ -42,18 +50,44 @@
                 position: absolute;
                 top: -8px;
                 left: 50%;
+                transition: all 2s linear 1s;
+            }
+            .novo {
+                width: 500px;
+                background-color: yellowgreen;
+                margin: 10px 10px 30px 30px;
+            }
+
+            .pin:hover {
+                width: 40px;
+                height: 40px;
+                background: rgb(10, 98, 175);
             }
         </style>
     </head>
     <body>
-        <h1>Hello baby</h1>
-        <h1>HTML</h1>
-        <h1>CSS</h1>
+        <div class="flutuante">
+            <h3 class="intro">Hello baby</h3>
+            <h3 class="text">HTML</h3>
+            <h3 class="test">CSS</h3>
+        </div>
         <p>Testing our site</p>
         <p>Let's try some things</p>
         <div class="bloco">
-            <div class="pin"></div>
+            <div class="pin">
+            </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam exercitationem possimus libero vel molestiae sed vero sint et dolorum? Quod, quo. Voluptatem nisi aliquam esse possimus accusamus amet tempora consequuntur.</p>
+        </div>
+        <div class="novo">
+           <p>Lorem ipsum dolor sit amet, <br/> adipisicing elit. Eos veniam repellat accusamus cupiditate alias, officiis voluptatum modi, pariatur tempore numquam, at dicta? Libero optio, impedit maiores eos inventore tempore quod.</p>
         </div>
     </body>
 </html>
